--- a/Java/Java基础/4. 封装.md
+++ b/Java/Java基础/4. 封装.md
@@ -8,6 +8,8 @@
 
 类第一次使用时会加载到方法区
 
+
+
 **Java 内存的结构分析**
 
 1) 栈： 一般存放基本数据类型(局部变量)
@@ -37,7 +39,7 @@
 
 局部变量：只有方法当中才可以使用，出了方法就不能再用
 
-成员变量：整个类全都可以通用。
+成员变量：整个类全都可以通用
 
 - 默认值不一样
 
@@ -63,7 +65,7 @@
 
 保存一个实例的内存地址（引用变量保存在栈），引用变量的特殊值：null 不保存任何实例的内存地址
 
-![image-20240223230937448](https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240223230937448.png)
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240223230937448.png" alt="image-20240223230937448" style="zoom:50%;" />
 
 
 
@@ -95,35 +97,29 @@ public class Person {
 
 ### **static 关键字**
 
+`static`关键字用于在Java中创建类级别的成员，这些成员不依赖于类的实例而存在，可以直接通过类名访问。
+
+从概念上讲，类变量所使用的内存都应当在 **方法区** 中进行分配。不过有一点需要注意的是：JDK 7 之前，HotSpot 使用永久代来实现方法区的时候，实现是完全符合这种逻辑概念的。 **而在 JDK 7 及之后，HotSpot 已经把原本放在永久代的字符串常量池、静态变量等移动到堆中**，这个时候类变量则会随着 **Class 对象**一起存放在 Java 堆中。
+
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240420112005906.png" alt="image-20240420112005906" style="zoom:50%;" />
+
+#### **静态变量**
+
 - 当 static 修饰成员变量时，该变量称为类变量。
 - 该类的每个对象都共享同一个类变量的值。
 - 任何对象都可以更改该类变量的值，但也可以在不创建该类的对象的情况下对类变量进行操作。
-- 随着类的加载而加载的，且只加载一次。
+- **随着类的加载而加载的，且只加载一次（JDK1.7之后随着Class对象加载到堆区）**。
 - 存储于一块固定的内存区域（静态区），所以，可以直接被类名调用。
 - 它优先于对象存在，所以可以被所有对象共享
 
  
 
-**方法区**
-
-保存在着**被加载过的每一个类的信息**；这些信息由类加载器在加载类的时候，从类的源文件中抽取出来；static变量信息也保存在方法区中；可以看做是将类（Class）的元数据，保存在方法区里。
-
-- 方法区是线程共享的；当有多个线程都用到一个类的时候，而这个类还未被加载，则应该只有一个线程去加载类，让其他线程等待
-- 方法区的大小不必是固定的，jvm可以根据应用的需要动态调整。jvm也可以允许用户和程序指定方法区的初始大小，最小和最大限制
-- 方法区同样存在垃圾收集，因为通过用户定义的类加载器可以动态扩展Java程序，这样可能会导致一些类，不再被使用，变为垃圾。这时候需要进行垃圾清理
-
- 
-
-![img](https://palepics.oss-cn-guangzhou.aliyuncs.com/img/clip_image009.png)
-
- 
-
-**静态方法**
+#### **静态方法**
 
 - 一旦使用static修饰成员方法，那么这就成为了静态方法。
 - 静态方法不属于对象，而是属于类的。
-- 如果没有static关键字，那么必须首先创建对象，然后通过对象才能使用它。
-- 如果有了static关键字，那么不需要创建对象，直接就能通过类名称来使用它。
+- **如果没有static关键字，那么必须首先创建对象，然后通过对象才能使用它。**
+- **如果有了static关键字，那么不需要创建对象，直接就能通过类名称来使用它。**
 
 无论是成员变量，还是成员方法。如果有了static，都推荐使用类名称进行调用。
 
@@ -131,24 +127,23 @@ public class Person {
 
 静态方法：类名称.静态方法()
 
- 
-
 **注意事项：**
 
-- 静态不能直接访问非静态。原因：因为在内存当中是【先】有的静态内容，【后】有的非静态内容。
-- 静态方法当中不能用this。原因：this代表当前对象，通过谁调用的方法，谁就是当前对象。
+- 静态方法不能直接访问非静态方法。原因：当编译器解析静态方法时，它不需要创建类的实例，**因此无法确定要调用的非静态方法是哪个实例的方法。**非静态方法的调用需要通过对象的引用来实现，而静态方法中没有当前对象的引用，无法进行非静态方法的调用。
+- 静态方法当中不能用this。原因：因为`this`关键字引用的是当前对象的引用，而静态方法没有当前对象的引用。
+- **如果需要需要静态方法调用非静态方法，需要通过new 对象.method()的方式调用**
 
 
 
-**静态代码块**
+
+
+#### **静态代码块**
 
 定义在成员位置，使用static修饰的代码块{ }。
 
-**位置：**类中方法外。
-
 **执行：随着类的加载而执行且执行一次，优先于main方法和构造方法的执行**
 
-静态代码块的典型用途：用来一次性地对静态成员变量进行赋值。
+静态代码块的典型用途：**用来一次性地对静态成员变量进行赋值。**
 
  <img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240223225722596.png" alt="image-20240223225722596" style="zoom: 80%;" />
 
@@ -158,17 +153,23 @@ public class Person {
 
 ### **final关键字**
 
-表示不可改变。可以用于修饰类、方法和变量。
-
-**修饰类：**被修饰的类，不能被继承。
-
-含义：当前这个类不能有任何的子类。（太监类）
-
-注意：一个类如果是final的，那么其中所有的成员方法都无法进行覆盖重写（因为没儿子。）
+表示不可改变。可以用于修饰类、方法和变量
 
 
 
-**修饰方法：**被修饰的方法，不能被重写。
+#### **final类**
+
+被修饰的类，不能被继承
+
+含义：当前这个类不能有任何的子类。
+
+注意：一个类如果是final的，那么其中所有的成员方法都无法进行覆盖重写
+
+
+
+#### **final方法**
+
+被修饰的方法，不能被重写
 
 当final关键字用来修饰一个方法的时候，这个方法就是最终方法，也就是不能被覆盖重写。
 
@@ -176,14 +177,18 @@ public class Person {
 
 
 
-**修饰变量：**被修饰的变量，不能被重新赋值。
+#### **final变量**
+
+被修饰的变量，不能被重新赋值。
+
+**对于基本类型来说，不可变说的是变量当中的数据不可改变**
+**对于引用类型来说，不可变说的是变量当中的地址值不可改变**
 
 对于成员变量来说，如果使用final关键字修饰，那么这个变量也照样是不可变。
 
 - 由于成员变量具有默认值，所以用了final之后必须**手动赋值**，不会再给默认值了。
 - 对于final的成员变量，要么使用直接赋值，要么通过构造方法赋值，二者选其一。
 - 必须保证类当中所有重载的构造方法，都最终会对final的成员变量进行赋值。
-- 
 
 ```java
 public class Person {
@@ -202,8 +207,8 @@ public class Person {
 }
 ```
 
-对于基本类型来说，不可变说的是变量当中的数据不可改变
-对于引用类型来说，不可变说的是变量当中的地址值不可改变
+**对于基本类型来说，不可变说的是变量当中的数据不可改变**
+**对于引用类型来说，不可变说的是变量当中的地址值不可改变**
 
 ```java
 final Student stu2 = new Student("高圆圆");
@@ -376,15 +381,13 @@ class Outer {
 
 #### **局部内部类要访问局部变量，为什么该变量必须是final？**
 
-
-
 备注：从Java 8+开始，只要局部变量事实不变（即不改变该局部变量的值），那么final关键字可以省略。
 
 原因：
 
 - new出来的对象在堆内存当中。
 - 局部变量是跟着方法走的，在栈内存当中，方法运行结束之后，立刻出栈，局部变量就会立刻消失。
-- 但是new出来的对象会在堆当中持续存在，直到垃圾回收消失。
+- 但是new出来的对象会在堆当中持续存在，直到垃圾回收消失，**当内部类对象要使用局部变量时就会出错**
 - **因为局部内部类的生命周期比方法的局部变量长**，所以要确保方法内的局部变量不改变
 
 ```java
@@ -400,7 +403,11 @@ public class MyOuter {
 }
 ```
 
- 
+**那为什么添加final修饰的局部变量，就可以被局部内部类引用呢？**
+
+若定义为final，则java编译器则会在内部类内生成一个外部变量的拷贝，而且可以既可以保证内部类可以引用外部属性，又能保证值的唯一性
+
+**也就是拷贝了一个变量的副本，提供给局部内部类，这个副本的生命周期和局部内部类一样长**，并且这个副本不可以修改，保证了数据的同步
 
  
 
@@ -500,10 +507,10 @@ public static void main(String[] args) {
 
   以下是静态内部类的一些特点和用法：
 
-  1. **静态内部类的声明**：静态内部类使用 static 关键字进行声明，它可以访问外部类的静态成员和方法，但不能访问外部类的非静态成员和方法。静态内部类的声明形式如下：
+  1. **静态内部类的声明**：静态内部类使用 static 关键字进行声明，它可以**访问外部类的静态成员和方法，但不能访问外部类的非静态成员和方法**。静态内部类的声明形式如下：
 
-     ```
-     javaCopy codepublic class OuterClass {
+     ```java
+     public class OuterClass {
          static class StaticInnerClass {
              // 静态内部类的成员和方法
          }
@@ -512,20 +519,30 @@ public static void main(String[] args) {
 
   2. **访问方式**：静态内部类可以直接通过外部类的类名进行访问，无需先创建外部类的实例。例如：
 
-     ```
-     javaCopy code
+     ```java
      OuterClass.StaticInnerClass inner = new OuterClass.StaticInnerClass();
      ```
-
-  3. **独立性**：静态内部类与外部类之间的关系不像普通内部类那样密切，静态内部类可以独立于外部类而存在，因此它不会持有外部类的引用。
-
-  4. **静态内部类的作用**：静态内部类通常用于以下情况：
-
-     - 帮助组织类和提高代码的可读性，将相关的类放在一起。
+     
+3. **独立性**：静态内部类与外部类之间的关系不像普通内部类那样密切，静态内部类可以独立于外部类而存在，因此它不会持有外部类的引用。
+  
+4. **静态内部类的作用**：静态内部类通常用于以下情况：
+  
+   - 帮助组织类和提高代码的可读性，将相关的类放在一起。
      - 如果内部类不需要访问外部类的实例变量或方法，可以将其声明为静态内部类，避免与外部类实例的绑定。
-     - 在外部类的静态方法中使用静态内部类
+     - **在外部类的静态方法中使用静态内部类**
 
- 
+```java
+    public static void main(String[] args) {
+        new Heart().beat();
+    }
+
+    public static class Heart {  // 成员内部类
+        // 内部类的方法
+        public void beat() {
+            System.out.println("心脏跳动：蹦蹦蹦！");
+        }
+    }
+```
 
  
 
