--- a/Java/Java基础/5. 继承.md
+++ b/Java/Java基础/5. 继承.md
@@ -609,10 +609,10 @@ public default void method() {
 
  
 
-### 抽象类和接口的区别
+### **抽象类和接口的区别**
 
 1. **定义方式：**
-   - 抽象类使用 `abstract` 关键字来定义，可以包含抽象方法（没有实现的方法）和具体方法（有实现的方法）。
+   - 抽象类使用 `abstract` 关键字来定义，**可以包含抽象方法（没有实现的方法）和具体方法（有实现的方法）。**
    - 接口使用 `interface` 关键字来定义，只能包含抽象方法和常量字段（默认为 `public static final`）。
 2. **方法实现：**
    - **抽象类可以包含抽象方法和具体方法**，子类可以继承抽象类并实现其中的抽象方法，也可以覆写具体方法。
@@ -621,7 +621,7 @@ public default void method() {
    - **抽象类只能单继承**，即一个类只能有一个直接父类。
    - **接口可以多继承**，即一个类可以实现多个接口。
 4. **构造方法：**
-   - 抽象类可以有构造方法，并且构造方法可以被子类调用。
+   - **抽象类可以有构造方法**，并且构造方法可以被子类调用。
    - **接口不能有构造方法**，因为接口中只能包含常量字段和抽象方法，无法包含具体实现的方法或者状态。
 5. **成员变量：**
    - 抽象类可以包含实例变量、静态变量、常量等。
