--- a/Java/Java基础/6. 多态.md
+++ b/Java/Java基础/6. 多态.md
@@ -30,7 +30,7 @@
 
 
 
-##### **多态的访问规则**
+### **多态的访问规则#**
 
 **成员变量：**在多态中，成员变量的访问规则是不会发生多态的，即使用的是编译时类型的变量。无论实际运行时对象是什么类型，访问的都是编译时类型定义的变量。编译看左边，运行看左边。
 
@@ -137,7 +137,7 @@ public class Demo01MultiField {
 
 
 
-##### **多态的上下转型**
+### **多态的上下转型**
 
 ```java
 class Animal { //父类
@@ -243,7 +243,7 @@ public static void main(String[] args) {
 
  
 
-**如何才能知道一个父类引用的对象，本来是什么子类？**
+### **如何才能知道一个父类引用的对象，本来是什么子类？**
 
 ```
 对象 instanceof 类名称
