--- a/Java/Java常用类/5. Scanner类、Random类.md
+++ b/Java/Java常用类/5. Scanner类、Random类.md
@@ -20,7 +20,7 @@ Scanner类的功能：可以实现键盘输入数据到程序当中。
 
 
 
-```
+```java
 import java.util.Scanner; // 1. 导包
 public class Demo01Scanner {
   public static void main(String[] args) {
