--- a/Java/Java进阶/反射.md
+++ b/Java/Java进阶/反射.md
@@ -4,23 +4,23 @@
 
 反射之所以被称为框架的灵魂，主要是因为它赋予了我们在运行时分析类以及执行类中方法的能力。
 
-通过反射你可以获取任意一个类的所有属性和方法，你还可以调用这些方法和属性。
+通过反射可以去构造任意一个类对象获取任意一个类的成员变量，成员方法，属性，可以在程序运行时动态的获取类的信息，以及动态的调用方法，通过java.lang.reflect实现反射相关的类库，包括Construct、Field、Method这样的类
 
 
 
-#### **谈谈反射机制的优缺点**
+### **谈谈反射机制的优缺点**
 
 **优点**：可以让咱们的代码更加灵活、为各种框架提供开箱即用的功能提供了便利
 
-- 增加程序的灵活性，可队在运行的过程中动态对类进行修改和操作
-- 提高代码的复用率，比如动态代理，就是用到了反射来实现
+- 增加程序的灵活性，可队在运行的过程中**动态对类进行修改和操作**
+- **提高代码的复用率**，比如动态代理，就是用到了反射来实现
 - 可以在运行时轻松获取任意一个类的方法、属性，并且还能通过反射进行动态调用
 
-**缺点**：让我们在运行时有了分析操作类的能力，这同样也增加了安全问题。比如可以无视泛型参数的安全检查（泛型参数的安全检查发生在编译时）。另外，反射的性能也要稍差点，不过，对于框架来说实际是影响不大的。相关阅读：[Java Reflection: Why is it so slow?](https://stackoverflow.com/questions/1392351/java-reflection-why-is-it-so-slow)
+**缺点**：让我们在运行时有了分析操作类的能力，这同样也增加了安全问题。**比如可以无视泛型参数的安全检查（泛型参数的安全检查发生在编译时）。**另外，反射的性能也要稍差点，不过，对于框架来说实际是影响不大的。相关阅读：[Java Reflection: Why is it so slow?](https://stackoverflow.com/questions/1392351/java-reflection-why-is-it-so-slow)
 
 - 反射会涉及到动态类型的解析，所以JVM无法对这些代码进行优化，导致性能要比非反前调用更低。
 - 使用反射以后，代码的可读性会下降
-- 反射可以绕过一些限制访问的属性或者方法，可能会导致破坏了代码本身的抽象性
+- **反射可以绕过一些限制访问的属性或者方法**，可能会导致破坏了代码本身的抽象性
 
 
 
@@ -328,7 +328,46 @@ System.out.println(cls2==cls3); //true
 
 
 
+### **反射会产生的安全性问题**
 
+Java反射机制是一种强大的工具，但同时也可能引发一些安全性问题，主要包括以下几个方面：
+
+1. **破坏封装性**：通过反射，可以访问和修改类的私有成员变量、方法和构造函数，从而破坏了类的封装性。这可能导致程序的不稳定性和安全隐患，使得不恰当的访问可能产生意外的结果。
+2. **绕过访问控制**：通过反射，可以绕过Java语言的访问控制机制，访问和修改类的私有成员变量和方法。这可能导致未经授权的访问，破坏了程序的安全性。
+3. **执行恶意代码**：恶意用户可以利用反射机制执行恶意代码，例如在运行时动态加载恶意类并执行其中的恶意方法，从而实现攻击目标系统的目的。
+4. **潜在的性能问题**：使用反射可能会导致性能下降，因为反射调用通常比直接调用方法或访问变量要慢，而且会消耗更多的资源。因此，过度使用反射可能会影响程序的性能。
+
+
+
+比如以下这个类，有一个final修饰的num变量，final修饰的变量只能在类初始化时赋值，并且不可改变
+
+```java
+public class MyClass {
+    public final int num;
+    public  MyClass(int num){
+        this.num = num;
+    }
+}
+```
+
+**通过setAccessible方法可以编译期的安全检测，修改final变量**
+
+`setAccessible(boolean flag)` 方法是 Java 反射机制中的一个方法，用于设置 Field、Method 或 Constructor 对象的可访问性。通过调用该方法并传入 `true` 参数，可以关闭 Java 语言的访问控制检查，使得无论访问修饰符是什么，都可以访问该对象。
+
+通常情况下，如果尝试访问一个私有成员（字段、方法或构造函数），或者是对于受保护或默认访问权限的成员，Java 编译器会执行访问控制检查，防止直接访问这些成员。但是，通过调用 `setAccessible(true)` 方法，可以绕过这种访问控制检查，从而获得对这些私有成员的访问权。
+
+```java
+public class Main {
+    public static void main(String[] args) throws NoSuchFieldException, IllegalAccessException {
+        MyClass obj = new MyClass(10);
+        Class<MyClass> myClass = MyClass.class;
+        Field num = myClass.getField("num");
+        num.setAccessible(true);
+        num.set(obj, 20); //IllegalAccessException
+        System.out.println(obj.num);
+    }
+}
+```
 
 
 
