--- a/Java/Java集合/1. Array，Arrays.md
+++ b/Java/Java集合/1. Array，Arrays.md
@@ -2,7 +2,7 @@
 
 属于**object类**，用来存放一组数据的数据结构，数组是最基本的一种数据结构但不是基本数据类型，数组是相同数据类型组成的集合，数组中的元素按*线性顺序排序*
 
-```
+```java
         //省略格式静态初始化
         int[] a = {6,2,6,8};
 		//静态初始化标准格式
@@ -91,7 +91,7 @@ int[][] a = new int[3] [];
 
 **Arrays.deepToString(数组)** 把多维数组转成字符串
 
-```
+```java
         int[] intArray = {10, 20, 30};
         // 将int[]数组按照默认格式变成字符串
         String intStr = Arrays.toString(intArray);
