--- a/Java/Java集合/4. Set接口.md
+++ b/Java/Java集合/4. Set接口.md
@@ -27,7 +27,7 @@ tips：
 - HashSet是根据对象的哈希值来确定元素在集合中的存储位置，因此具有良好的存取和查找性能。
 - 保证元素唯一性的方式依赖于：hashCode与equals方法。
 
-```
+```java
 public static void main(String[] args) {
   Set<Integer> set = new HashSet<>();
   //使用add方法往集合中添加元素
@@ -89,7 +89,7 @@ HashSet加入元素时
 
 set集合报错元素唯一：存储的元素为(String,Integer,...Student,Person...)时，**必须重写hashCode方法和equals方法**，因为不同对象的地址值不相同
 
-```
+```java
 public class Demo01HashCode {
   public static void main(String[] args) {
     //Person类继承了Object类,所以可以使用Object类的hashCode方法
@@ -130,7 +130,7 @@ public class Demo01HashCode {
 
 要求：同名同年龄的人视为同一个人，只能存储一次（若不重写，不同的对象必定可以重复存储）
 
-```
+```java
 public class Person {
   private String name;
   private int age;
