--- a/Java/Java集合/7. Map接口.md
+++ b/Java/Java集合/7. Map接口.md
@@ -250,6 +250,20 @@ for (Map.Entry<Person, String> entry : set) {
 
  
 
+#### **HashMap中put的过程？**
+
+HashMap 只提供了 put 用于添加元素，putVal 方法只是给 put 方法调用的一个方法，并没有提供给用户使用。
+
+**对 putVal 方法添加元素的分析如下：**
+
+1. 如果定位到的数组位置没有元素，就直接插入。
+2. 如果定位到的数组位置有元素就和要插入的 key 比较，如果 key 相同就直接覆盖，如果 key 不相同，就判断 p 是否是一个树节点，如果是就调用`e = ((TreeNode<K,V>)p).putTreeVal(this, tab, hash, key, value)`将元素添加进入。如果不是就遍历链表插入(插入的是链表尾部)。
+3. 插入完成后，判断是否需要扩容
+
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240423154815661.png" alt="image-20240423154815661" style="zoom: 80%;" />
+
+
+
 
 
 
