--- a/计算机基础/设计模式/02-单例模式.md
+++ b/计算机基础/设计模式/02-单例模式.md
@@ -56,7 +56,7 @@ public class Singleton {
 
 ```
 
-饿汉模式，比较常见的一种写法。在类加载的时候就对实例进行初始化，没有线程安全问题；获取实例的静态方法没有使用同步，调用效率高；但是没有使用懒加载，如果该实例从始至终都没被使用过，则会造成内存浪费。
+饿汉模式，比较常见的一种写法。**在类加载的时候就对实例进行初始化，没有线程安全问题**；获取实例的静态方法没有使用同步，调用效率高；但是没有使用懒加载，如果该实例从始至终都没被使用过，则会造成内存浪费。
 
 **总结：线程安全、非懒加载、效率高。**
 
@@ -82,7 +82,7 @@ public class Singleton {
 
 ```
 
-线程安全的懒汉模式，比较常见的一种写法。在第一次使用的时候才进行初始化，达到了懒加载的效果；由于获取实例的静态方法用synchronized修饰，所以也没有线程安全的问题；但是，这种写法每次获取实例都要进行同步（加锁），因此效率较低，并且可能很多同步都是没必要的。
+线程安全的懒汉模式，比较常见的一种写法。在第一次使用的时候才进行初始化，达到了懒加载的效果；由于获取实例的**静态方法用synchronized修饰**，所以也没有线程安全的问题；但是，**这种写法每次获取实例都要进行同步（加锁）**，因此效率较低，并且可能很多同步都是没必要的。
 
 **总结：线程安全、懒加载、效率低。**
 
@@ -113,7 +113,7 @@ public class Singleton {
 
 ```
 
-双重检测机制（双重检查加锁），比较常见的一种写法。在第一次使用的时候才进行初始化，达到了懒加载的效果；在进行初始化的时候会进行同步（加锁），因此没有线程安全问题；并且只有第一次进行初始化才进行同步，因此不会有效率方面的问题。
+双重检测机制（双重检查加锁），比较常见的一种写法。在第一次使用的时候才进行初始化，达到了懒加载的效果；使用双重检锁的方式可以在多线程环境下保证只有一个实例被创建，**并且在实例创建后，不需要再进入同步块，提高了性能。**
 
 《Java Concurrency in Practice》作者Brian Goetz在书中提到关于DCL的观点：促使DCL模式出现的驱动力（无竞争同步的执行速度很慢，以及JVM启动时很慢）已经不复存在，因而它不是一种高效的优化措施。延迟初始化占位类模式（静态内部类）能带来同样的优势，并且更容易理解。
 
