--- a/项目/认证鉴权/密码学.md
+++ b/项目/认证鉴权/密码学.md
@@ -1,6 +1,6 @@
 ## 密码学相关
 
-##### 对称加密和非对称加密原理
+### **对称加密和非对称加密原理**
 
 对称加密和非对称加密是两种常见的密码学算法，用于保护数据的机密性和安全性。它们的原理和使用方式有所不同：
 
@@ -36,7 +36,7 @@
 
 
 
-##### 解释一下数字签名和数字信封
+### **解释一下数字签名和数字信封**
 
 **数字签名：**(发送方私钥签名，公钥解密)
 数字签名是一种用于验证消息来源和完整性的密码学机制。它使用私钥对消息进行签名，然后其他人可以使用公钥来验证签名的有效性。数字签名提供了以下保证：
@@ -58,7 +58,7 @@
 
 
 
-##### 数字签名如何验证消息的完整性
+### **数字签名如何验证消息的完整性**
 
 数字签名通过使用私钥对消息进行签名，然后使用公钥来验证签名的有效性，从而实现对消息完整性的验证。下面是数字签名验证消息完整性的基本过程：
 
@@ -82,7 +82,7 @@
 
 
 
-##### 数字签名和数字证书有什么区别
+### **数字签名和数字证书有什么区别**
 
 数字签名和数字证书都是公钥基础设施（PKI）中的重要组成部分，但它们有不同的作用和应用。
 
@@ -110,7 +110,7 @@
 
 
 
-##### **用户不能直接把自己的公钥公开吗，为什么还需要CA？**
+### **用户不能直接把自己的公钥公开吗，为什么还需要CA？**
 
 用户可以选择将自己的公钥公开，这样其他人就可以使用该公钥来验证用户的数字签名。然而，为了确保公钥的真实性和可信性，以及对用户身份进行验证，使用CA是非常有益的。
 
@@ -123,7 +123,7 @@
 
 
 
-#####解释一下单向加密的原理，有哪些技术使用了单向加密
+###**解释一下单向加密的原理，有哪些技术使用了单向加密**
 
 单向加密（One-way encryption）是一种加密技术，其主要特点是加密过程是不可逆的，即无法通过密文还原为原始明文。它的核心原理是应用哈希函数对输入数据进行转换，生成固定长度的哈希值，也称为摘要（Digest）。
 
