--- a/Java/Java基础/3. 方法.md
+++ b/Java/Java基础/3. 方法.md
@@ -96,7 +96,7 @@ public static void method() {
 
  
 
-### 可变长参数
+### **可变长参数**
 
 从 Java5 开始，Java 支持定义可变长参数，所谓可变长参数就是允许在调用方法时传入不定长度的参数。就比如下面的这个 `printVariable` 方法就可以接受 0 个或者多个参数。
 
