--- a/Java/Java多并发/多线程.md
+++ b/Java/Java多并发/多线程.md
@@ -27,15 +27,13 @@ JDK 1.2 之前，Java 线程是基于绿色线程（Green Threads）实现的，
 
 
 
-
-
 ### **如何创建线程？**
 
 一般来说，创建线程有很多种方式，例如继承`Thread`类、实现`Runnable`接口、实现`Callable`接口、使用线程池、使用`CompletableFuture`类等等。
 
 不过，这些方式其实并没有真正创建出线程。准确点来说，这些都属于是在 Java 代码中使用多线程的方法。
 
-严格来说，Java 就只有一种方式可以创建线程，那就是通过`new Thread().start()`创建。不管是哪种方式，最终还是依赖于`new Thread().start()`。
+严格来说，Java 就只有一种方式可以创建线程，那就是通过`new Thread().start()`创建。不管是哪种方式，最终还是依赖于`new Thread().start()`
 
 
 
@@ -128,10 +126,6 @@ public class Demo01Thread {
 **public static Thread currentThread()** ：返回对当前正在执行的线程对象的引用。
 
 **public static void sleep(long millis)：**使当前正在执行的线程以指定的毫秒数暂停（暂时停止执行)，毫秒数结束之后,线程继续执行。
-
-
-
-
 
 ```java
 // 定义一个Thread类的子类
@@ -231,8 +225,6 @@ public class Demo01SetThreadName {
 #### **实现Runnable接口**
 
 Runnable接口应该由那些打算通过某一线程执行其实例的类来实现，Runnable接口的实现类类必须**定义一个称为 run 的无参数方法**
-
- 
 
 通过java.lang.Thread类的构造方法
 
@@ -550,53 +542,61 @@ public class Main {
 
 
 
-编写一个程序，启动三个线程，三个线程的ID分别是A，B，C；，每个线程将自己的ID值在屏幕上打印5遍，打印顺序是ABCABC…
+编写一个程序，启动三个线程，三个线程的ID分别是1，2，3；，每个线程依次打印1A,2B,3C,1D,2E,3F
 
 ```java
 public class Main {
     public static void main(String[] args) {
-        final Printer printer = new Printer();
-
-        Thread threadA = new Thread(() -> {
-            for (int i = 0; i < 5; i++) {
-                printer.print(0,"A");
+        Print print = new Print();
+        Thread t1 =  new Thread(()->{
+            while (true){
+                print.myPrint( 0);
             }
         });
+        Thread t2 =  new Thread(()->{
+            while (true){
+                print.myPrint(1);
+            }
 
-        Thread threadB = new Thread(() -> {
-            for (int i = 0; i < 5; i++) {
-                printer.print(1,"B");
+        });
+        Thread t3 =  new Thread(()->{
+            while (true){
+                print.myPrint(2);
             }
         });
-
-        Thread threadC = new Thread(() -> {
-            for (int i = 0; i < 5; i++) {
-                printer.print(2,"C");
-            }
-        });
-
-        threadA.start();
-        threadB.start();
-        threadC.start();
+        t1.start();
+        t2.start();
+        t3.start();
     }
-}
 
-class Printer {
-    private int turn = 0; // 控制轮到哪个线程打印
+    public static class Print{
+        private static int turn = 0;
+        private static int count = 0;
+        private static char zimu = 'A';
 
-    public synchronized void print(int id , String s) {
-        while (turn != id) {
-            try {
-                wait(); // 当前线程不是轮到的线程，进入等待状态
-            } catch (InterruptedException e) {
-                e.printStackTrace();
+        public synchronized void myPrint(int flag){
+            while (turn != flag){
+                try {
+                    this.wait();
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
             }
+
+            zimu = (char)('A' + count);
+            if(flag == 0){
+                System.out.println("1" + zimu);
+            }else if(flag == 1){
+                System.out.println("2" + zimu);
+            }else if(flag == 2){
+                System.out.println("3" + zimu);
+            }
+            count = (count + 1) % 26;
+            turn = (turn + 1) % 3;
+            this.notifyAll();
         }
-
-        System.out.print(s);
-        turn = (turn + 1) % 3; // 更新轮到的线程
-        notifyAll(); // 唤醒其他等待的线程
     }
+
 }
 ```
 
@@ -696,14 +696,6 @@ public class Main {
 
 }
 ```
-
-
-
-
-
-
-
-
 
 
 
@@ -818,4 +810,40 @@ Thread[线程 2,5,main]waiting get resource1
 避免死锁就是在资源分配时，借助于算法（比如银行家算法）对资源分配进行计算评估，使其进入安全状态。
 
 > **安全状态** 指的是系统能够按照某种线程推进顺序（P1、P2、P3……Pn）来为每个线程分配所需资源，直到满足每个线程对资源的最大需求，使每个线程都可顺利完成。称 `<P1、P2、P3.....Pn>` 序列为安全序列。
+
+
+
+
+
+### **如何排查线程死锁？**
+
+首先使用jps查找程序的线程
+
+然后使用jstack 线程id，就可以找到死锁线程
+
+如下图，t2正在等待锁对象的地址为0x000000076b4alaf8，而t1正在锁住该对象，所以发生了思死锁
+
+<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240418160202135.png" alt="image-20240418160202135" style="zoom: 67%;" />
+
+
+
+
+
+### **线程在内存中如何保证安全性？**
+
+在堆内存，所有的线程都可以访问到该堆区域，因此如果有一个共享的变量可以被所有的线程访问到，就有可能产生安全风险。
+
+**解决方法**
+
+**私有化：**比如局部变量，每个线程都有自己的栈空间，可以保证只能操作自己的数据
+
+**不共享：**保证公共区域的数据安全，ThreadLocal线程本地存储是一种特殊的数据存储区域，每个线程都有自己的线程本地存储区域，不同线程之间互不干扰，从而避免了线程间数据共享的安全问题。
+
+**只读：**final关键字，如常量， 但是`final` 修饰的对象的引用地址不可变，但对象的状态（即对象内部的成员变量值）仍然可以被修改。如果对象状态是可变的，并且被多个线程同时访问和修改，那么仍然可能出现线程安全问题。
+
+**加锁：**Java 提供了多种同步机制，如 synchronized 关键字、Lock 接口、Atomic 类等，用于控制对共享资源的访问，防止多个线程同时访问导致的数据竞争和安全问题。同步机制可以保证在同一时刻只有一个线程访问共享资源，从而确保了线程安全性。
+
+**CAS：**CAS 操作是一种无锁的并发控制机制，CAS 主要适用于对单个共享变量进行原子操作的场景，例如计数器、标记位等。CAS 是一种乐观锁机制，它假设并发冲突不会经常发生，因此在高并发、高竞争的情况下，CAS 可能会导致自旋等待，性能下降。
+
+
 
